Placing h1 before p tag

--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-      <div class="card">
-        <a href="https://slack.com/intl/en-in/">
-          <div class="main-image">
-            <img src="/Image.jpg" alt="Slack Image" width="944" height="630" />
+         <div class="clickable-div">
+          <a href="https://slack.com/intl/en-in/"><img class="main-image"src="/Image.jpg" alt="Slack Image" width="944" height="630" /></a>
+          <a href="https://slack.com/intl/en-in/help" class="clickable-link">
+            <div class="title"><h1>Slack</h1></div>
+           </a>
+           <p class="paragraph">One platform for your team and your work</p>
+           <p class="paragraph">6.67 USD</p>
+           <p class="paragraph">60% parity discount in India</p>
           </div>
-          <p class="paragraph">One platform for your team and your work</p>
-          <p class="paragraph">6.67 USD</p>
-          <p class="paragraph">60% parity discount in India</p>
-        </a>
-        <a href="https://slack.com/intl/en-in/help">
-          <div class="title"><h1>Slack</h1></div>
-        </a>
-      </div>
+      
   </body>
 </html>
